<resources>
    <string name="app_name">Bhakt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="bhakti_geet">Bhakti Geet</string>
    <string name="quotes_from_bhagwad_gita">Quotes from Bhagwad Gita</string>
    <string name="shuffle">Shuffle</string>
    <string name="logo">logo</string>
    <string name="mantra">Mantra</string>
    <string name="featured">Featured</string>
    <string name="mandir">Mandir</string>
    <string name="panchang">Panchang</string>
    <string name="ganesh_ji">Ganesh Ji</string>
</resources>