<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="0dp"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/homebg"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/quotes_from_bhagwad_gita"
        android:textColor="@color/white"
        android:paddingTop="50dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/blurcv"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="@id/blurcv"
        app:layout_constraintBottom_toTopOf="@id/blurcv"
        android:padding="5dp"
        android:background="@drawable/bg_blur_round"
        android:layout_margin="15dp"
        android:id="@+id/audiorv"
        >
        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/progress_circular"
            android:indeterminateTint="@color/white"/>

        <ImageView
            android:id="@+id/vol_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_volume_up_24"
            app:tint="@color/white" />

    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/blurcv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:background="@drawable/bgblur">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/quote_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </ScrollView>



        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar1"
        app:layout_constraintTop_toBottomOf="@id/blurcv"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/bhakti_geet"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/shuffle"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bar1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/recycler"
            app:layout_constraintTop_toBottomOf="@id/bar1"
            android:orientation="horizontal"
            tools:listitem="@layout/rc_home_card"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:background="@color/featured_bg"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingVertical="10dp"
                android:fontFamily="@font/lato"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/featurell"
                android:text="@string/featured"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:id="@+id/featurell"
                android:background="@color/featured_bg"
                app:layout_constraintTop_toBottomOf="@+id/recycler"
                app:layout_constraintStart_toStartOf="parent">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal">

                    <RelativeLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:background="@drawable/nue_square"
                        >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/mantraIv"
                            android:layout_centerInParent="true"
                            android:src="@drawable/mantra" />
                    </RelativeLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mantra"
                        android:fontFamily="@font/lato_bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal">

                    <RelativeLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:background="@drawable/nue_square"
                        >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/mandirIv"
                            android:layout_centerInParent="true"
                            android:src="@drawable/mandir" />
                    </RelativeLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mandir"
                        android:fontFamily="@font/lato_bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal">

                    <RelativeLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:background="@drawable/nue_square"
                        >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/panchangIv"
                            android:layout_centerInParent="true"
                            android:src="@drawable/panchang" />
                    </RelativeLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/panchang"
                        android:fontFamily="@font/lato_bold"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>






            </LinearLayout>


        </LinearLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>